isi data moved from app.vue to isi component

--- a/src/Components/Blocks/ISI/ISI.html
+++ b/src/Components/Blocks/ISI/ISI.html
@@ -2,42 +2,42 @@
     <div class="contentWrap">
         <div class="isi__Wrapper">
             <div class="isi__indication">
-                <h2 class="title"><span v-html="isiData.indicationData.title"></span><span class="isiIcon" :class="{ active: isOpen }" @click="isOpen = !isOpen"></span></h2>
-                <p class="des" v-html="isiData.indicationData.des"></p>
+                <h2 class="title"><span>INDICATIONS</span><span class="isiIcon" :class="{ active: isOpen }" @click="isOpen = !isOpen"></span></h2>
+                <p class="des">Taltz is indicated for adults with active psoriatic arthritis (PsA), for adults with active ankylosing spondylitis (AS), and for adults with active non-radiographic axial spondyloarthritis (nr-axSpA) with objective signs of inflammation. Taltz is also indicated for patients aged 6 years or older with moderate-to-severe plaque psoriasis (PsO) who are candidates for systemic therapy or phototherapy.</p>
             </div>
             <div class="isi__safety">
-                <h2 class="title" v-html="isiData.safetyData.title"></h2>
+                <h2 class="title">IMPORTANT SAFETY INFORMATION</h2>
     
-                <h3 class="heading" v-html="isiData.safetyData.contraindication.title"></h3>
-                <p class="des" v-html="isiData.safetyData.contraindication.des"></p>
+                <h3 class="heading">CONTRAINDICATIONS</h3>
+                <p class="des">Taltz is contraindicated in patients with a previous serious hypersensitivity reaction, such as anaphylaxis, to ixekizumab or to any of the excipients.</p>
     
-                <h3 class="heading" v-html="isiData.safetyData.warnings.title"></h3>
-                <h4 class="subHeading" v-html="isiData.safetyData.warnings.infection.subtitle"></h4>
-                <p class="des" v-html="isiData.safetyData.warnings.infection.des"></p>
+                <h3 class="heading">WARNINGS AND PRECAUTIONS</h3>
+                <h4 class="subHeading">Infections</h4>
+                <p class="des">Taltz may increase the risk of infection. Serious infections have occurred. In clinical trials of adult patients with plaque psoriasis, the Taltz group had a higher rate of infections than the placebo group (27% vs 23%). A similar increase in risk of infection was seen in placebo-controlled trials of adult patients with psoriatic arthritis, ankylosing spondylitis, non-radiographic axial spondyloarthritis, and pediatric patients with plaque psoriasis. In the post-marketing setting, serious bacterial, viral, and fungal opportunistic infections have been reported in patients receiving IL-17 inhibitors, including Taltz. Instruct patients to seek medical advice if signs or symptoms of clinically important chronic or acute infection occur. If a patient develops a serious infection or is not responding to standard therapy, monitor the patient closely and discontinue Taltz until the infection resolves.</p>
     
-                <h4 class="subHeading" v-html="isiData.safetyData.warnings.evaluation.subtitle"></h4>
-                <p class="des" v-html="isiData.safetyData.warnings.evaluation.des"></p>
+                <h4 class="subHeading">Pre-Treatment Evaluation for Tuberculosis</h4>
+                <p class="des">Evaluate patients for tuberculosis (TB) infection prior to initiating treatment with Taltz. Do not administer to patients with active TB infection. Initiate treatment of latent TB prior to administering Taltz. Consider anti-TB therapy prior to initiating Taltz in patients with a past history of latent or active TB in whom an adequate course of treatment cannot be confirmed. Patients receiving Taltz should be monitored closely for signs and symptoms of active TB during and after treatment.</p>
     
-                <h4 class="subHeading" v-html="isiData.safetyData.warnings.hypersentivity.subtitle"></h4>
-                <p class="des" v-html="isiData.safetyData.warnings.hypersentivity.des"></p>
+                <h4 class="subHeading">Hypersensitivity</h4>
+                <p class="des">Serious hypersensitivity reactions, including angioedema and urticaria (each ≤0.1%), occurred in the Taltz group in clinical trials. Anaphylaxis, including cases leading to hospitalization, has been reported in post-marketing use with Taltz. If a serious hypersensitivity reaction occurs, discontinue Taltz immediately and initiate appropriate therapy.</p>
     
-                <h4 class="subHeading" v-html="isiData.safetyData.warnings.eczematous.subtitle"></h4>
-                <p class="des" v-html="isiData.safetyData.warnings.eczematous.des"></p>
+                <h4 class="subHeading">Eczematous Eruptions</h4>
+                <p class="des">In the postmarketing setting, cases of severe eczematous eruptions, including atopic dermatitis-like eruptions, dyshidrotic eczema, and erythroderma were reported in patients receiving Taltz; some cases resulted in hospitalization. The onset of eczematous eruptions was variable, ranging from days to months after the first dose of Taltz. Treatment may need to be discontinued to resolve the eczematous eruption. Some patients with limited psoriasis treatment options were successfully treated for eczema while continuing Taltz.</p>
     
-                <h4 class="subHeading" v-html="isiData.safetyData.warnings.inflammatory.subtitle"></h4>
-                <p class="des" v-html="isiData.safetyData.warnings.inflammatory.des"></p>
+                <h4 class="subHeading">Inflammatory Bowel Disease</h4>
+                <p class="des">Patients treated with Taltz may be at an increased risk of inflammatory bowel disease. In clinical trials, Crohn's disease and ulcerative colitis, including exacerbations, occurred at a greater frequency in the Taltz group than the placebo group. During Taltz treatment, monitor patients for onset or exacerbations of inflammatory bowel disease and if IBD occurs, discontinue Taltz and initiate appropriate medical management.</p>
     
-                <h4 class="subHeading" v-html="isiData.safetyData.warnings.immunizations.subtitle"></h4>
-                <p class="des" v-html="isiData.safetyData.warnings.immunizations.des"></p>
+                <h4 class="subHeading">Immunizations</h4>
+                <p class="des">Prior to initiating therapy with Taltz, consider completion of all age-appropriate immunizations according to current immunization guidelines. Avoid use of live vaccines in patients treated with Taltz.</p>
     
-                <h4 class="subHeading" v-html="isiData.safetyData.warnings.adverse.subtitle"></h4>
-                <p class="des" v-html="isiData.safetyData.warnings.adverse.des"></p>
+                <h4 class="subHeading">ADVERSE REACTIONS</h4>
+                <p class="des">Most common adverse reactions (≥1%) associated with Taltz treatment are injection site reactions, upper respiratory tract infections, nausea, and tinea infections. Overall, the safety profiles observed in adult patients with psoriatic arthritis, ankylosing spondylitis, non-radiographic axial spondyloarthritis, and pediatric patients with plaque psoriasis were consistent with the safety profile in adult patients with plaque psoriasis, with the exception of influenza and conjunctivitis in psoriatic arthritis and conjunctivitis, influenza, and urticaria in pediatric psoriasis.</p>
     
-                <p class="des" v-html="isiData.safetyData.warnings.adverse.links.text"></p>
+                <p class="des"><b>Please see <a class="primary" href="https://cancertherapy.com/prescribing-information" target="_blank">Prescribing Information</a> and <a class="primary" href="https://cancertherapy.com/medication-guide" target="_blank">Medication Guide</a>. See <a class="primary" href="https:cancertherapy.com/instruction-use" target="_blank">Instructions for Use</a> included with the device.</b></p>
     
-                <p class="des" v-html="isiData.safetyData.warnings.adverse.taltz"></p>
+                <p class="des"><b>[Taltz is available as an 80 mg/mL, 40 mg/0.5mL, 20 mg/0.25mL injection.]</b></p>
     
-                <p class="des" v-html="isiData.safetyData.warnings.adverse.ix"></p>
+                <p class="des"><b>IX HCP ISI 20AUG2024</b></p>
     
             </div>
         </div>
