--- a/src/Components/Blocks/ISI/ISI.scss
+++ b/src/Components/Blocks/ISI/ISI.scss
@@ -10,6 +10,10 @@
   height: 210px;
   overflow-y: scroll;
 
+  @include media("<=tablet") {
+    padding-top: 10px;
+  }
+
   &__Wrapper {
     display: flex;
     flex-direction: row-reverse;
@@ -26,15 +30,19 @@
     height: auto;
 
     @include media("<=tablet") {
-      flex: 95%;
+      flex: none;
       max-width: 100%;
-      height: 80px;
-      overflow-y: scroll;
     }
 
     .title {
       display: flex;
       justify-content: space-between;
+
+      @include media("<=tablet") {
+        padding-bottom: 0 !important;
+        border-bottom: none !important;
+        margin-bottom: -10px !important;
+      }
 
       .isiIcon {
         width: 26px;
@@ -58,7 +66,7 @@
     max-width: 485px;
 
     @include media("<=tablet") {
-      flex: 95%;
+      flex: none;
       max-width: 100%;
     }
 
