fixed isi hidden based on static isi position from bottom

--- a/src/Components/Blocks/ISI/ISI.html
+++ b/src/Components/Blocks/ISI/ISI.html
@@ -1,4 +1,5 @@
-<div class="isi" :class="{ active: isOpen, static: currentSection > 2 }">
+<!-- <div class="isi" :class="{ active: isOpen, static: currentSection > 2 }"> -->
+<div class="isi" :class="{ active: isOpen, static: isStatic , hideFixed: isFixedHidden}">
     <div class="contentWrap">
         <div class="isi__Wrapper">
             <div class="isi__indication">
