--- a/src/Components/Blocks/ISI/ISI.html
+++ b/src/Components/Blocks/ISI/ISI.html
@@ -3,7 +3,7 @@
     <div class="contentWrap">
         <div class="isi__Wrapper">
             <div class="isi__indication">
-                <h2 class="title"><span>INDICATIONS</span><span class="isiIcon" :class="{ active: isOpen }" @click="isOpen = !isOpen"></span></h2>
+                <h2 class="title"><span>INDICATIONS</span><span class="isiIcon" :class="{ active: isOpen }" @click="toogleIsi"></span></h2>
                 <p class="des">Taltz is indicated for adults with active psoriatic arthritis (PsA), for adults with active ankylosing spondylitis (AS), and for adults with active non-radiographic axial spondyloarthritis (nr-axSpA) with objective signs of inflammation. Taltz is also indicated for patients aged 6 years or older with moderate-to-severe plaque psoriasis (PsO) who are candidates for systemic therapy or phototherapy.</p>
             </div>
             <div class="isi__safety">
